--- a/master.yml
+++ b/master.yml
@@ -2,14 +2,14 @@
   become: yes
   tasks:
     - name: initialize the cluster
-      shell: kubeadm init --pod-network-cidr=192.168.2.0/24 >> cluster_initialized.txt
+      shell: kubeadm init --pod-network-cidr=192.168.111.0/24 >> cluster_initialized.txt
       args:
         chdir: $HOME
         creates: cluster_initialized.txt
 
     - name: create .kube directory
       become: yes
-      become_user: shgn
+      become_user: kuber
       file:
         path: $HOME/.kube
         state: directory
@@ -18,13 +18,13 @@
     - name: copy admin.conf to user's kube config
       copy:
         src: /etc/kubernetes/admin.conf
-        dest: /home/shgn/.kube/config
+        dest: /home/kuber/.kube/config
         remote_src: yes
-        owner: shgn
+        owner: kuber
 
     - name: install Pod network
       become: yes
-      become_user: shgn
+      become_user: kuber
       shell: kubectl create -f https://docs.projectcalico.org/manifests/tigera-operator.yaml >> pod_network_setup.txt
       shell: kubectl create -f https://docs.projectcalico.org/manifests/custom-resources.yaml >> pod_network_setup.txt
       args:
@@ -33,7 +33,7 @@
 
     - name: set bash completion for kubectl
       become: yes
-      become_user: shgn
+      become_user: kuber
       shell: echo 'source <(kubectl completion bash)' >>~/.bashrc
       args:
         chdir: $HOME
